--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "aos": "^3.0.0-beta.6",
     "autoprefixer": "^9.0.0",
     "cruip-js-toolkit": "^1.0.2",
+    "firebase": "^9.13.0",
+    "notistack": "^2.0.8",
     "postcss-cli": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
