--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
