--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "aos": "^3.0.0-beta.6",
     "autoprefixer": "^9.0.0",
+    "axios": "^1.1.3",
     "cruip-js-toolkit": "^1.0.2",
     "firebase": "^9.13.0",
     "notistack": "^2.0.8",
