--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "axios": "^1.1.3",
     "cruip-js-toolkit": "^1.0.2",
     "firebase": "^9.13.0",
+    "google-map-react": "^2.2.0",
     "notistack": "^2.0.8",
     "postcss-cli": "^7.1.2",
     "react": "^16.13.1",
+    "react-addons": "^0.9.1-deprecated",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-pure-render": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
