--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^9.0.0",
     "axios": "^1.1.3",
     "cruip-js-toolkit": "^1.0.2",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.13.0",
     "google-map-react": "^2.2.0",
     "notistack": "^2.0.8",
